<resources>
    <string name="app_name">收哪儿</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="permission_record">麦克风没有声音或被占用,请到手机的"设置-权限管理-收哪儿"打开所有权限</string>
    <string name="permission_sdcard">没有储存权限或拍照,请到手机的"设置-权限管理-收哪儿"打开所有权限</string>
    <string name="permission_xuanfu">没有悬浮窗口权限,请到手机的"设置-权限管理-收哪儿"打开所有权限</string>
    <string name="permission_capture">调用相机失败,请到手机的"设置-权限管理-收哪儿"打开所有权限</string>

    <!--二维码-->
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="msg_default_status">请将二维码置于屏幕中间(若光线暗请按音量的增加键)。</string>
    <string name="barcode_msg_fail">扫描失败！</string>
    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>
    <string name="confirm">确定</string>
    <string name="scaning">扫描二维码</string>
    <string name="two_code_card">二维码名片</string>
    <string name="add_more_text">批量添加</string>
    <string name="add_goods_text">添加物品</string>
    <string name="add_goods_other_content_text">添加属性</string>
    <string name="add_goods_other_content_text_2">选择共同属性</string>
    <string name="add_more_goods_text">批量添加</string>
    <string name="add_goods_remind_text">添加提醒</string>
    <string name="goods_remind_details_text">提醒详情</string>
    <string name="delete_text">删除</string>
    <string name="cancel_text">取消</string>
    <string name="remind_unfinish_text">未完成</string>
    <string name="remind_finished_text">已完成</string>
    <string name="remind_title_text">我的提醒</string>
    <string name="add_remind_title_text">新建提醒</string>
    <string name="remind_details_title_text">提醒详情</string>
    <string name="finished_text">完成</string>
    <string name="remind_good_text">关联物品</string>
    <string name="remind_time_text">提醒时间</string>
    <string name="remind_first_text">优先处理</string>
    <string name="remind_overdue_time_text">过期提醒</string>
    <string name="remind_overdue_time_hint_text">开启后过期将每日提醒</string>
    <string name="remind_remarks_text">说明备注</string>
    <string name="title_text">标题</string>
    <string name="add_remind_et_hint_text">请输入标题</string>
    <string name="add_relation_et_hint_text">物品名称</string>
    <string name="act_title_relation">关联物品</string>
    <string name="classification_text">分类</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="add_remind_title_hint">请输入标题</string>
    <string name="add_remind_time_hint">请设置提醒时间</string>
    <string name="add_remind_time_hint_two">请重新设置提醒时间</string>
    <string name="remind_goods_name_text">名称: %1$s</string>
    <string name="remind_goods_classify_text">分类: %1$s</string>
    <string name="remind_goods_location_text">位置: %1$s</string>
    <string name="remind_remarks_title_text">说明备注</string>
    <string name="remind_remarks_hint_text">说明备注描述</string>
    <string name="remind_remarks_num_text">%1$s/150</string>
    <string name="remind_first_label_text">优先</string>
    <string name="float_hint_text">点击释放</string>
    <string name="float_un_hint_text">长按删除</string>
    <string name="remind_edit_finished_text">标记完成</string>

</resources>
