<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:orientation="vertical"
    tools:context=".activity.AddRemindActivity">

    <include layout="@layout/layout_title_bar_all_other" />

    <RelativeLayout
        android:id="@+id/remind_goods_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_44"
        android:layout_marginTop="@dimen/dip_12"
        android:background="@drawable/select_white_bg"
        android:paddingLeft="@dimen/dip_16"
        android:paddingRight="@dimen/dip_16">
        <!--android:drawableLeft="@drawable/icon_a_wx"-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawablePadding="@dimen/dip_8"
            android:gravity="center"
            android:text="@string/remind_good_text"
            android:textColor="@color/black_87"
            android:textSize="@dimen/f_15" />

        <TextView
            android:id="@+id/tv_wx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawableRight="@drawable/icon_next_black"
            android:drawablePadding="@dimen/dip_16"
            android:textColor="@color/black_87"
            android:textSize="@dimen/f_15" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_44"
        android:layout_marginTop="@dimen/dip_36"
        android:background="@drawable/select_white_bg"
        android:paddingLeft="@dimen/dip_16"
        android:paddingRight="@dimen/dip_16">
        <!--android:drawableLeft="@drawable/icon_a_wx"-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawablePadding="@dimen/dip_8"
            android:gravity="center"
            android:text="@string/title_text"
            android:textColor="@color/black_87"
            android:textSize="@dimen/f_15" />

        <EditText
            android:id="@+id/add_remind_et"
            android:layout_width="@dimen/dip_300"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:gravity="center|end"
            android:hint="@string/add_remind_et_hint_text"
            android:textColor="@color/black_87"
            android:textColorHint="@color/black_other_one"
            android:textSize="@dimen/f_15" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/remind_time_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_44"
        android:layout_marginTop="@dimen/dip_36"
        android:background="@drawable/select_white_bg"
        android:paddingLeft="@dimen/dip_16"
        android:paddingRight="@dimen/dip_16">
        <!--android:drawableLeft="@drawable/icon_a_wx"-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/remind_time_text"
            android:textColor="@color/black_87"
            android:textSize="@dimen/f_15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawableRight="@drawable/icon_next_black"
            android:drawablePadding="@dimen/dip_16"
            android:textColor="@color/black_87"
            android:textSize="@dimen/f_15" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dip_16"
        android:background="@color/black_12" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_44"
        android:background="@drawable/select_white_bg"
        android:paddingLeft="@dimen/dip_16"
        android:paddingRight="@dimen/dip_16">
        <!--android:drawableLeft="@drawable/icon_a_wx"-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/remind_first_text"
            android:textColor="@color/black_87"
            android:textSize="@dimen/f_15" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/remind_first_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dip_16"
        android:background="@color/black_12" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_44"
        android:background="@drawable/select_white_bg"
        android:paddingLeft="@dimen/dip_16"
        android:paddingRight="@dimen/dip_16">
        <!--android:drawableLeft="@drawable/icon_a_wx"-->
        <TextView
            android:id="@+id/remind_overdue_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/remind_overdue_time_text"
            android:textColor="@color/black_87"
            android:textSize="@dimen/f_15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dip_20"
            android:layout_toEndOf="@id/remind_overdue_time_text"
            android:gravity="center"
            android:text="@string/remind_overdue_time_hint_text"
            android:textColor="@color/black_40"
            android:textSize="@dimen/f_11" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/remind_overdue_time_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dip_16"
        android:background="@color/black_12" />

    <RelativeLayout
        android:id="@+id/remind_remarks_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/select_white_bg"
        android:minHeight="@dimen/dip_100"
        android:paddingLeft="@dimen/dip_16"
        android:paddingRight="@dimen/dip_16">
        <!--android:drawableLeft="@drawable/icon_a_wx"-->
        <TextView
            android:id="@+id/remind_remarks_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dip_8"
            android:gravity="center"
            android:text="@string/remind_remarks_text"
            android:textColor="@color/black_87"
            android:textSize="@dimen/f_15" />

        <TextView
            android:id="@+id/remind_remarks_content_tx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/remind_remarks_text_view"
            android:layout_marginTop="@dimen/dip_8"
            android:layout_marginEnd="@dimen/dip_40"
            android:layout_marginBottom="@dimen/dip_8"
            android:gravity="center"
            android:textColor="@color/black_40"
            android:textSize="@dimen/f_15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawableRight="@drawable/icon_next_black"
            android:drawablePadding="@dimen/dip_16"
            android:textColor="@color/black_87"
            android:textSize="@dimen/f_15" />
    </RelativeLayout>
</LinearLayout>