<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activity.EditRemindActivity">

    <include
        android:id="@+id/remind_title_layout"
        layout="@layout/layout_title_bar_all_other" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/remind_title_layout"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/remind_goods_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_44"
            android:layout_marginTop="@dimen/dip_12"
            android:background="@drawable/select_white_bg"
            android:paddingLeft="@dimen/dip_16"
            android:paddingRight="@dimen/dip_16">
            <!--android:drawableLeft="@drawable/icon_a_wx"-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawablePadding="@dimen/dip_8"
                android:gravity="center"
                android:text="@string/remind_good_text"
                android:textColor="@color/black_87"
                android:textSize="@dimen/f_15" />

            <TextView
                android:id="@+id/tv_wx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawableRight="@drawable/icon_next_black"
                android:drawablePadding="@dimen/dip_16"
                android:textColor="@color/black_87"
                android:textSize="@dimen/f_15" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/remind_goods_details_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_150"
            android:layout_marginStart="@dimen/dip_16"
            android:layout_marginTop="@dimen/dip_12"
            android:layout_marginEnd="@dimen/dip_16"
            android:background="@drawable/shape_remind_item_bg">

            <ImageView
                android:id="@+id/goods_iv"
                android:layout_width="@dimen/dip_76"
                android:layout_height="@dimen/dip_76"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dip_18" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dip_114"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/goods_name_tv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    tools:text="名称:" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2px"
                    android:background="@color/black_12" />

                <TextView
                    android:id="@+id/goods_classify_tv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    tools:text="分类:" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2px"
                    android:background="@color/black_12" />

                <TextView
                    android:id="@+id/goods_location_tv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    tools:text="位置:" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_44"
            android:layout_marginTop="@dimen/dip_36"
            android:background="@drawable/select_white_bg"
            android:paddingLeft="@dimen/dip_16"
            android:paddingRight="@dimen/dip_16">
            <!--android:drawableLeft="@drawable/icon_a_wx"-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawablePadding="@dimen/dip_8"
                android:gravity="center"
                android:text="@string/title_text"
                android:textColor="@color/black_87"
                android:textSize="@dimen/f_15" />

            <EditText
                android:id="@+id/add_remind_et"
                android:layout_width="@dimen/dip_300"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center|end"
                android:hint="@string/add_remind_et_hint_text"
                android:singleLine="true"
                android:textColor="@color/black_87"
                android:textColorHint="@color/black_other_one"
                android:textSize="@dimen/f_15"
                android:theme="@style/MyEditText" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/remind_time_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_44"
            android:layout_marginTop="@dimen/dip_36"
            android:background="@drawable/select_white_bg"
            android:paddingLeft="@dimen/dip_16"
            android:paddingRight="@dimen/dip_16">
            <!--android:drawableLeft="@drawable/icon_a_wx"-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/remind_time_text"
                android:textColor="@color/black_87"
                android:textSize="@dimen/f_15" />

            <TextView
                android:id="@+id/remind_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawableRight="@drawable/icon_next_black"
                android:drawablePadding="@dimen/dip_16"
                android:textColor="@color/black_87"
                android:textSize="@dimen/f_15" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/dip_16"
            android:background="@color/black_12" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_44"
            android:background="@drawable/select_white_bg"
            android:paddingLeft="@dimen/dip_16"
            android:paddingRight="@dimen/dip_16">
            <!--android:drawableLeft="@drawable/icon_a_wx"-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/remind_first_text"
                android:textColor="@color/black_87"
                android:textSize="@dimen/f_15" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/remind_first_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/dip_16"
            android:background="@color/black_12" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_44"
            android:background="@drawable/select_white_bg"
            android:paddingLeft="@dimen/dip_16"
            android:paddingRight="@dimen/dip_16">
            <!--android:drawableLeft="@drawable/icon_a_wx"-->
            <TextView
                android:id="@+id/remind_overdue_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/remind_overdue_time_text"
                android:textColor="@color/black_87"
                android:textSize="@dimen/f_15" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dip_20"
                android:layout_toEndOf="@id/remind_overdue_time_text"
                android:gravity="center"
                android:text="@string/remind_overdue_time_hint_text"
                android:textColor="@color/black_40"
                android:textSize="@dimen/f_11" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/remind_overdue_time_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/dip_16"
            android:background="@color/black_12" />

        <RelativeLayout
            android:id="@+id/remind_remarks_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/select_white_bg"
            android:minHeight="@dimen/dip_100"
            android:paddingLeft="@dimen/dip_16"
            android:paddingRight="@dimen/dip_16">
            <!--android:drawableLeft="@drawable/icon_a_wx"-->
            <TextView
                android:id="@+id/remind_remarks_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dip_8"
                android:gravity="center"
                android:text="@string/remind_remarks_text"
                android:textColor="@color/black_87"
                android:textSize="@dimen/f_15" />

            <TextView
                android:id="@+id/remind_remarks_content_tx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/remind_remarks_text_view"
                android:layout_marginTop="@dimen/dip_8"
                android:layout_marginEnd="@dimen/dip_40"
                android:layout_marginBottom="@dimen/dip_8"
                android:gravity="start"
                android:textColor="@color/black_40"
                android:textSize="@dimen/f_15" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawableRight="@drawable/icon_next_black"
                android:drawablePadding="@dimen/dip_16"
                android:textColor="@color/black_87"
                android:textSize="@dimen/f_15" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_remind_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dip_16"
        android:layout_marginEnd="@dimen/dip_16"
        android:layout_marginBottom="@dimen/dip_24"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/dip_44"
            android:layout_weight="1"
            android:background="@drawable/shape_remind_bt_bg"
            android:elevation="@dimen/dip_2"
            android:gravity="center"
            android:text="删除"
            android:textColor="@color/remind_delete_text_color"
            android:textSize="@dimen/f_15" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/dip_44"
            android:layout_marginStart="@dimen/dip_24"
            android:layout_weight="1"
            android:background="@drawable/shape_remind_bt_bg"
            android:elevation="@dimen/dip_2"
            android:gravity="center"
            android:text="标记完成"
            android:textColor="@color/remind_add_text_color"
            android:textSize="@dimen/f_15" />

    </LinearLayout>
</RelativeLayout>